// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Author snapshot author3 1`] = `
<div>
  <section
    className="box-articles"
  >
    <section
      className="mod-headersection --line"
    >
      <h3
        className="com-title --l"
      >
        <SkeletonSpan
          extraClass=""
        />
      </h3>
    </section>
    <div
      className="row-gap-tablet-3 "
    />
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Color snapshot notaColorRosa3 1`] = `
<div>
  <section
    className="box-articles --highlight --pink"
  >
    <section
      className="mod-headersection --line"
    >
      <h3
        className="com-title --l"
      >
        <SkeletonSpan
          extraClass=""
        />
      </h3>
    </section>
    <div
      className="row-gap-tablet-3 "
    />
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Color snapshot notaColorVerde3 1`] = `
<div>
  <section
    className="box-articles --highlight --teal"
  >
    <section
      className="mod-headersection --line"
    >
      <h3
        className="com-title --l"
      >
        <SkeletonSpan
          extraClass=""
        />
      </h3>
    </section>
    <div
      className="row-gap-tablet-3 "
    />
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Editoriales snapshot editoriales2 1`] = `
<div>
  <section
    className="box-articles --editoriales"
  >
    <div
      className="mod-footersection"
    >
      <h4
        className="com-title --twoxs"
      >
        <SkeletonSpan
          extraClass=""
        />
      </h4>
      <div
        className="col-12"
      />
    </div>
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Focal snapshot focalLeft3 1`] = `
<div>
  <section
    className="box-articles --focal --left"
  >
    <section
      className="mod-headersection --line"
    >
      <h3
        className="com-title --l"
      >
        <SkeletonSpan
          extraClass=""
        />
      </h3>
    </section>
    <div
      className="row "
    >
      <div
        className="col-tablet-8"
      >
        <article
          className="mod-article"
        >
          <SkeletonContentMedia />
          <section
            className="mod-description"
          >
            <h1
              className="com-title --xl"
            >
              <SkeletonSpan
                extraClass="--line1"
              />
              <SkeletonSpan
                extraClass="--line2"
              />
              <SkeletonSpan
                extraClass="--line3"
              />
            </h1>
            <h2
              className="com-subhead --twoxs"
            >
              <SkeletonSpan
                extraClass="--line1"
              />
              <SkeletonSpan
                extraClass="--line2"
              />
            </h2>
            <SkeletonAuthorName />
          </section>
        </article>
      </div>
      <div
        className="col-tablet-4"
      >
        <SkeletonDefaultArticle />
        <SkeletonDefaultArticle />
      </div>
    </div>
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Focal snapshot focalRight2 1`] = `
<div>
  <section
    className="box-articles --focal --right"
  >
    <section
      className="mod-headersection --line"
    >
      <h3
        className="com-title --l"
      >
        <SkeletonSpan
          extraClass=""
        />
      </h3>
    </section>
    <div
      className="row "
    >
      <div
        className="col-tablet-8"
      >
        <article
          className="mod-article"
        >
          <SkeletonContentMedia />
          <section
            className="mod-description"
          >
            <h1
              className="com-title --xl"
            >
              <SkeletonSpan
                extraClass="--line1"
              />
              <SkeletonSpan
                extraClass="--line2"
              />
            </h1>
            <SkeletonAuthorName />
          </section>
        </article>
      </div>
      <div
        className="col-tablet-4"
      >
        <article
          className="mod-article"
        >
          <SkeletonContentMedia />
          <section
            className="mod-description"
          >
            <h2
              className="com-title --xl"
            >
              <SkeletonSpan
                extraClass="--line1"
              />
              <SkeletonSpan
                extraClass="--line2"
              />
              <SkeletonSpan
                extraClass="--line3"
              />
            </h2>
            <h3
              className="com-subhead --twoxs"
            >
              <SkeletonSpan
                extraClass="--line1"
              />
              <SkeletonSpan
                extraClass="--line2"
              />
              <SkeletonSpan
                extraClass="--line3"
              />
              <SkeletonSpan
                extraClass="--line4"
              />
            </h3>
            <SkeletonAuthorName />
          </section>
        </article>
      </div>
    </div>
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Grilla snapshot grilla1 1`] = `
<div>
  <section
    className="box-articles --cinema"
  >
    <section
      className="mod-headersection --line"
    >
      <h3
        className="com-title --l"
      >
        <SkeletonSpan
          extraClass=""
        />
      </h3>
    </section>
    <div
      className="row"
    >
      <SkeletonGrillaArticle />
    </div>
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Grilla snapshot grilla2 1`] = `
<div>
  <section
    className="box-articles "
  >
    <section
      className="mod-headersection --line"
    >
      <h3
        className="com-title --l"
      >
        <SkeletonSpan
          extraClass=""
        />
      </h3>
    </section>
    <div
      className="row-gap-tablet-2"
    />
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Grilla snapshot grilla3 1`] = `
<div>
  <section
    className="box-articles "
  >
    <section
      className="mod-headersection --line"
    >
      <h3
        className="com-title --l"
      >
        <SkeletonSpan
          extraClass=""
        />
      </h3>
    </section>
    <div
      className="row-gap-tablet-3"
    />
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Grilla snapshot grilla6 1`] = `
<div>
  <section
    className="box-articles "
  >
    <section
      className="mod-headersection --line"
    >
      <h3
        className="com-title --l"
      >
        <SkeletonSpan
          extraClass=""
        />
      </h3>
    </section>
    <div
      className="row-gap-tablet-3"
    />
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Grilla snapshot grilla9 1`] = `
<div>
  <section
    className="box-articles "
  >
    <section
      className="mod-headersection --line"
    >
      <h3
        className="com-title --l"
      >
        <SkeletonSpan
          extraClass=""
        />
      </h3>
    </section>
    <div
      className="row-gap-tablet-3"
    />
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Opinion snapshot opinion4 1`] = `
<div>
  <section
    className="box-articles  --opinion"
  >
    <section
      className="mod-headersection --line"
    >
      <h3
        className="com-title --l"
      >
        <SkeletonSpan
          extraClass=""
        />
      </h3>
    </section>
    <div
      className="row"
    >
      <div
        className="col-tablet-5"
      >
        <article
          className="mod-article"
        >
          <SkeletonContentMediaWithoutFigure />
          <section
            className="mod-description"
          >
            <h2
              className="com-title --l"
            >
              <SkeletonSpan
                extraClass="--line1"
              />
              <SkeletonSpan
                extraClass="--line2"
              />
              <SkeletonSpan
                extraClass="--line3"
              />
            </h2>
            <SkeletonAuthorName />
          </section>
        </article>
      </div>
      <div
        className="col-tablet-4"
      >
        <SkeletonOpinionArticle />
        <SkeletonOpinionArticle />
      </div>
      <div
        className="col-tablet-3"
      >
        <article
          className="mod-article --author"
        >
          <SkeletonContentMedia />
          <section
            className="mod-description"
          >
            <h2
              className="com-title --l"
            >
              <SkeletonSpan
                extraClass="--line1"
              />
              <SkeletonSpan
                extraClass="--line2"
              />
              <SkeletonSpan
                extraClass="--line3"
              />
              <SkeletonSpan
                extraClass="--line3"
              />
            </h2>
            <SkeletonAuthorName />
          </section>
        </article>
      </div>
    </div>
  </section>
</div>
`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout Unknown snapshot layoutX 1`] = `"Cargando..."`;

exports[`Util cajaTemasPlaceholder function getPlaceholder by layout and index position when layout is bomba1 should return bomba index 0 1`] = `
<article
  className="mod-article"
>
  <SkeletonContentMedia />
  <section
    className="mod-description"
  >
    <h1
      className="com-title --threexl"
    >
      <SkeletonSpan
        extraClass="--line1"
      />
      <SkeletonSpan
        extraClass="--line2"
      />
    </h1>
  </section>
</article>
`;
